2010-10-28  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Martin Robinson.

        [GTK] WebKitWebFrame's load-status is not properly notified to the tests
        https://bugs.webkit.org/show_bug.cgi?id=48048

        * platform/gtk/Skipped: unskipped a couple of tests
2010-10-28  Sergio Villar Senin  <svillar@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] WebKitWebFrame's load-status is not properly notified to the tests
        https://bugs.webkit.org/show_bug.cgi?id=48048

        "frame-created" signal must be issued before loading any data,
        that way clients can correctly capture all the loading related
        signals for that frame.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::createFrame):
2010-10-28  Sergio Villar Senin  <svillar@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] WebKitWebFrame's load-status is not properly notified to the tests
        https://bugs.webkit.org/show_bug.cgi?id=48048

        DRT now listens to WebKitWebFrame load-status signals for each
        created frame instead of the load-status signal of the
        WebKitWebView that only notifies about changes in the main frame.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (webViewLoadFinished):
        (webFrameLoadStatusNotified):
        (frameCreatedCallback):
        (createWebView):
        (main):

Canonical link: https://commits.webkit.org/61302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70788 268f45cc-cd09-0410-ab3c-d52691b4dbfc